# renfe-price-optimizer

./: .gitignore  LICENSE
.github/workflows/: ci.yml
renfe-price-optimizer/: .env.example  .gitignore  Dockerfile  GITHUB_SETUP.md  MEMORIA_MLOPS.md  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
renfe-price-optimizer/.github/workflows/: ci.yml
renfe-price-optimizer/docs/: architecture.md
renfe-price-optimizer/models/: renfe_model.pkl
renfe-price-optimizer/notebooks/: 01_eda.ipynb
renfe-price-optimizer/reports/: metrics.json
renfe-price-optimizer/src/renfe_optimizer/: __init__.py  config.py  features.py  predict.py  train.py
renfe-price-optimizer/src/renfe_optimizer/api/: main.py  schemas.py
renfe-price-optimizer/src/renfe_optimizer/api/routers/: predict.py
renfe-price-optimizer/streamlit_app/: app.py
renfe-price-optimizer/tests/: test_api.py  test_features.py
