[project]
name = "renfe-price-optimizer"
version = "0.1.0"
description = "TFM MLOps — Predicción de precios Renfe Madrid-Barcelona y recomendación de compra"
authors = [
    {name = "Alejandro Montenegro"},
    {name = "Laura Nieto"},
    {name = "Daniel Pardo"},
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "mlflow>=2.14",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    "joblib>=1.4",
    "pyyaml>=6.0",
    "streamlit>=1.36",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "httpx>=0.27",
    "dvc>=3.50",
    "dvc-gdrive>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/renfe_optimizer"]
